--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,7 @@ nav{
 	cursor: pointer;
 }
 span{
-	color: #f9004d;
+	color: ;
 }
 nav ul li{
 	list-style-type: none;
@@ -73,16 +73,16 @@ h3{
 	margin-bottom: 50px;
 }
 h4{
-	color: #fcfc;
+	color: #f9004d;
 	letter-spacing: 2px;
 	font-size: 20px;
 }
-.newslatter form{
+.newsletter form{
 	width: 380px;
 	max-width: 100%;
 	position: relative;
 }
-.newslatter form input:first-child{
+.newsletter form input:first-child{
 	display: inline-block;
 	width: 100%;
 	padding: 14px 130px 14px 15px;
@@ -90,7 +90,7 @@ h4{
 	outline: none;
 	border-radius: 30px;
 }
-.newslatter form input:last-child{
+.newsletter form input:last-child{
 	position: absolute;
 	display: inline-block;
 	outline: none;
